# ac-copilot-trainer

./: .copier-answers.yml  .cursorrules  .env.example  .gitattributes  .gitignore  .mcp.json  .pr_agent.toml  .pre-commit-config.yaml  .secrets.baseline  .sourcery.yaml  AGENTS.md  AGENT_CORE_PRINCIPLES.md  CLAUDE.md  CODEX.md  Comment_LEDGER_PR78.md  Makefile  README.md  WARP.md  copier.yml  doppler.yaml  pyproject.toml
.claude/: pitfalls-hub.json  settings.base.json  settings.json
.claude/agents/: dependency-review.md  issue-driven-coding-orchestrator.md  learner.md  post-merge-steward.md  pr-resolution-follow-up.md
.claude/rules/: context7.md  invariants.md  memory.md  orchestration.md  vault-editing.md  workflow.md
.cursor/: BUGBOT.md  mcp.json
.cursor/rules/: claude.mdc  cursor-task-delegation.mdc  github-issue-workflow.mdc  invariants.mdc  other-agents-aware-behavior.mdc  pr-resolution-follow-up.mdc  vault-editing.mdc
.gemini/: config.yaml  review_instructions.md  styleguide.md
.github/: dependabot.yml  pr-pain-config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: implementation.md
.github/agents/: issue-refiner.agent.md
.github/workflows/: ci.yml  codeql.yml  cross-repo-mining.yml  policy-check.yml  post-merge-notify.yml  pr-pain-detection.yml  process-miner.yml  qodo-review.yml  security.yml  template-feedback.yml  template-sync.yml  vault-automerge.yml
docs/00_Core/: BOOTSTRAP_NEW_PROJECT.md  CHILD_REPOS.md  GITHUB_SETUP.md  HOOK_DESIGN.md  MAINTAINING_THE_TEMPLATE.md  OPTIONAL_CAPABILITIES.md  PROPAGATION_STRATEGY.md  PROVENANCE.md  SESSION_LIFECYCLE.md  TOOLCHAIN.md
docs/01_Vault/: 00_Graph_Schema.md
docs/10_Development/: 10_Agent_Protocol.md  11_Repository_Structure.md  11_Session_Journal_Schema.md  12_WS_Sidecar_Protocol.md  PR78_comment_ledger.md  PR80_comment_ledger.md
firmware/screen/: .gitignore  README.md  default_16MB.csv  platformio.ini
ops/: memory_manifest.yml  service.yaml.example
reports/process_miner/: 2026-03-28_last30days.md  2026-03-30_last7days.md  2026-04-04_last30days.md  2026-04-06_last7days.md  2026-04-13_last7days.md
scripts/: INVENTORY.md  _build_pr80_ledger.py  bootstrap_knowledge.py  check_agent_forbidden.py  check_bootstrap_complete.py  check_csp_api.py  check_csp_ui_safety.py  check_policy_docs.sh  check_vault_follow_up.sh  ci_policy.py  claude_pretool_vault_guard.sh  copier_post_copy.py  cross_repo_aggregate.py  fleet_inventory_refresh.py  hook_bash_pre_tool.sh  hook_detect_git_commit.py  hook_json_field.py  hook_protect_main.sh  hook_protect_main_impl.py  hook_sensitive_file_guard.sh  ingest_session_debriefs.py  init_knowledge_db.py  knowledge_session_summary.py  merge_settings.py  policy_tracked_files.sh  post_merge_classify.py  post_merge_sync.sh  pre_commit_check_test_artifacts.py  process_miner.py  session_debrief.py
src/ac_copilot_trainer/: __init__.py  ac_copilot_trainer.lua  manifest.ini  start_sidecar.bat
tests/: design_conformance_checklist.yaml  test_ai_sidecar.py  test_ai_sidecar_external.py  test_ai_sidecar_improvement.py  test_ai_sidecar_protocol.py  test_bootstrap_knowledge.py  test_check_agent_forbidden.py  test_ci_policy.py  test_coaching_max_visible_contract.py  test_corner_names.py  test_csp_ui_safety_check.py  test_design_conformance.py  test_focus_practice.py  test_hook_scripts.py  test_llm_coach.py  test_lua_runtime_smoke.py  test_manifest_phase5.py  test_merge_settings.py  test_phase5_rebuild_ete.py  test_post_merge_classify.py  test_pr_pain.py  test_session_debrief.py  test_session_debrief_ingest.py  test_session_debrief_schema.py  test_session_journal.py  test_skill_pointer_consistency.py  test_smoke.py
tests/fixtures/: lap_sidecar_last.json  lap_sidecar_ref.json
tests/test_model_training/: test_data_pipeline.py  test_miner_multi_bot_export.py  test_train_cli.py
tests/test_process_miner/: test_aggregate.py  test_analyze.py  test_analyze_bot_metadata.py  test_analyze_cluster_positive.py  test_analyze_prs.py  test_bot_authorship.py  test_classify_preventability.py  test_classify_severity.py  test_distill.py  test_emit.py  test_emit_hooks.py  test_github_client.py  test_github_merged_prs.py  test_github_surface.py  test_noise_filter.py  test_noise_filter_post_cluster.py  test_render_collect.py  test_render_full.py  test_semantic_cluster.py  test_vault_audit.py
tests/test_repo_knowledge/: test_ingest_query.py  test_mcp_server_import.py
tests/test_scripts/: test_check_csp_api.py  test_copier_post_copy.py  test_cross_repo_aggregate.py  test_fleet_inventory_refresh.py  test_init_knowledge_db.py
tools/: __init__.py  session_journal.py
tools/_enrichment/: README.md  phase3_milestones_seed.csv
tools/ai_sidecar/: __init__.py  external_protocol.py  features.py  improvement_ranking.py  protocol.py  server.py  session.py
tools/model_training/: __init__.py  data_pipeline.py  dataset_stats.py  format_cpt.py  format_dpo.py  format_sft.py  train.py
tools/pr_pain/: README.md  __init__.py  file_issue.py  pain_score.py
tools/process_miner/: README.md  run.py  (+16 more)
(+390 files in other folders)
