[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ac-copilot-trainer"
version = "0.1.0"
description = "AI-powered driving trainer for Assetto Corsa — CSP Lua app with brake point detection, lap comparison, 3D track markers, and real-time coaching"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "bandit>=1.7",
  "ruff>=0.8",
  "pre-commit>=4.0",
  "requests>=2.31.0",
  "websockets>=12",
]
mining = [
  "requests>=2.31.0",
  "scikit-learn>=1.3.0",
  "numpy>=1.24.0",
]
knowledge = [
    "mcp>=1.2.0",
]
bootstrap = [
    "copier>=9.14.0,<10",
]
coaching = [
    "websockets>=12",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "shap>=0.44.0",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["ac_copilot_trainer*", "tools*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["src/ac_copilot_trainer", "tools"]
omit = [
  "tools/process_miner/run.py",
  "tools/repo_knowledge/mcp_server.py",
  "tools/ai_sidecar/__main__.py",
]
