[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ac-copilot-trainer"
version = "0.1.0"
description = "AI-powered driving trainer for Assetto Corsa — CSP Lua app with brake point detection, lap comparison, 3D track markers, and real-time coaching"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "bandit>=1.9.4",
  "ruff>=0.15.10",
  "pre-commit>=4.5.1",
  "requests>=2.33.1",
  "websockets>=16.0",
  "lupa>=2.7",  # Lua runtime for HUD smoke tests (issue #66)
]
mining = [
  "requests>=2.33.1",
  "scikit-learn>=1.8.0",
  "numpy>=2.4.4",
]
knowledge = [
    "mcp>=1.27.0",
]
bootstrap = [
    "copier>=9.14.3,<10",
]
coaching = [
    "websockets>=16.0",
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
    "shap>=0.51.0",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["ac_copilot_trainer*", "tools*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["src/ac_copilot_trainer", "tools"]
omit = [
  "tools/process_miner/run.py",
  "tools/repo_knowledge/mcp_server.py",
  "tools/ai_sidecar/__main__.py",
]
